# MEngineV4

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-linux.sh  build-macos.sh  build-windows.bat  vcpkg-configuration.json  vcpkg.json
Core/: CMakeLists.txt
Core/ECS/: CMakeLists.txt
Core/ECS/include/: ECS.hpp
Core/Log/: CMakeLists.txt
Core/Log/include/: AsyncLogger.hpp  ILogger.hpp  Logger.hpp  Spdlogger.hpp
Core/Log/src/: AsyncLogger.cpp  Logger.cpp  Spdlogger.cpp
Core/Math/: CMakeLists.txt
Core/Math/include/: Math.hpp
Core/UUID/: CMakeLists.txt
Core/UUID/include/: IUUIDGenerator.hpp  UUID.hpp  UUIDGenerator.hpp  UUIDv7Generator.hpp
Core/UUID/src/: UUID.cpp  UUIDGenerator.cpp  UUIDv7Generator.cpp
Core/Utils/: CMakeLists.txt
Core/Utils/include/: ImageUtil.hpp  ShaderUtils.hpp
Core/Utils/src/: ImageUtil.cpp  ShaderUtils.cpp
Function/: CMakeLists.txt
Function/Component/: CMakeLists.txt
Function/Component/include/: CameraComponent.hpp  Component.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  TransformComponent.hpp
Function/RenderSystem/: CMakeLists.txt
Function/RenderSystem/Manager/: CMakeLists.txt
Function/RenderSystem/Manager/include/: GraphicPipelineManager.hpp  IGraphicPipelineManager.hpp  IManager.hpp  IPipelineLayoutManager.hpp  IShaderManager.hpp  Manager.hpp  PipelineLayoutManager.hpp  RenderPassManager.hpp  ShaderManager.hpp
Function/RenderSystem/Manager/src/: GraphicPipelineManager.cpp  PipelineLayoutManager.cpp  ShaderManager.cpp
Function/RenderSystem/RHI/: CMakeLists.txt
Function/RenderSystem/RHI/include/: VulkanContext.hpp
Function/RenderSystem/RHI/src/: VulkanContext.cpp
Function/RenderSystem/Utils/: CMakeLists.txt
Function/RenderSystem/Utils/include/: ImageUtil.hpp  ShaderUtils.hpp
Function/RenderSystem/Utils/src/: ImageUtil.cpp  ShaderUtils.cpp
Function/RenderSystem/include/: RenderSystem.hpp
Function/RenderSystem/include/Manager/: Dispatcher.hpp  GraphicPipelineManager.hpp  IGraphicPipelineManager.hpp  IManager.hpp  IPipelineLayoutManager.hpp  IShaderManager.hpp  ITextureManager.hpp  Manager.hpp  PipelineLayoutManager.hpp  RenderPassManager.hpp  ShaderManager.hpp  TextureManager.hpp
Function/RenderSystem/include/RHI/: VulkanContext.hpp
Function/RenderSystem/src/: RenderSystem.cpp
Function/RenderSystem/src/Manager/: GraphicPipelineManager.cpp  PipelineLayoutManager.cpp  RenderPassManager.cpp  ShaderManager.cpp
Function/RenderSystem/src/RHI/: VulkanContext.cpp
Function/System/: CMakeLists.txt
Function/System/include/: System.hpp
Function/SystemBase/include/: ISystem.hpp
Platform/: CMakeLists.txt
Platform/RHI/: CMakeLists.txt
Platform/RHI/include/: MPMCQueue.hpp  RHIHandler.hpp  RHIResource.hpp  RHIResourceManager.hpp  RHIResourceType.hpp
Platform/RHI/src/: RHIResource.cpp  RHIResourceManager.cpp
Resource/: CMakeLists.txt
Resource/Asset/: CMakeLists.txt
Resource/Asset/include/: Asset.hpp  ComputePipeline.hpp  FrameBuffer.hpp  GraphicPipeline.hpp  Material.hpp  PBRMaterial.hpp  Pipeline.hpp  PipelineLayout.hpp  PipelineLayoutType.hpp  RenderPassType.hpp  Scene.hpp  Shader.hpp  ShadowMapTexture2D.hpp  StaticMesh.hpp  Texture.hpp  Texture2D.hpp  Texture2DArray.hpp  TextureCube.hpp  TextureCubeArray.hpp  TextureRenderTarget.hpp  TextureRenderTarget2D.hpp  TextureRenderTextureCube.hpp  Vertex.hpp
Resource/Asset/src/: Vertex.cpp
Resource/AssetManager/: CMakeLists.txt
Resource/AssetManager/include/: AssetManager.hpp  AssetURL.hpp
Resource/AssetManager/src/: AssetManager.cpp  AssetURL.cpp
Resource/Engine/Shaders/: ForwardOpaquePBR.frag  ForwardOpaquePBR.vert  GBuffer.frag  GBuffer.vert  Lighting.frag  Lighting.vert  Sky.frag  Sky.vert
Resource/Engine/Textures/: BRDFLUT.ktx  IrradianceMap.hdr
Test/: CMakeLists.txt
Test/Core/: CMakeLists.txt  LoggerTest.cpp  UUIDTest.cpp
Test/Function/: CMakeLists.txt  DispatcherTest.cpp  PipelineLayoutManagerTest.cpp  PipelineManagerTest.cpp  ShaderManagerTest.cpp  ShaderTest.cpp
Test/Platform/: CMakeLists.txt  RHIHandlerTest.cpp
Test/Resource/: AssetManagerTest.cpp  AssetURLTest.cpp  CMakeLists.txt
